# weblate-batch-scripts

./: .gitignore  Dockerfile  README.md  config.py  config.py.example  main.py  makefile  projects.json  pyproject.toml  requirements.txt  run_in_k8s.yaml
cache_repo/: README.md
data/: projects.json
src/: components.py  daogit.py  utils.py
templates/: home.html  index.html  person_config.html  project_info.html
